# Socially-aware-navigation

./: LICENSE  README.md  pyproject.toml
Assets/: Architecture Horizontal.drawio  Architecture.drawio
Code/: dataset.py  main.py  model.py
Code/jupyter_nb/: new_notebook.ipynb  notebook.ipynb
enpm809k/: main.py  notebook.ipynb  test.py
pose_data/: annolist_keyframes.json
pose_data/images/single/: annotations.json
