[tool.poetry]
name = "enpm809k"
version = "0.1.0"
description = ""
authors = ["Jared Dobry <jareddobry10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
tensorflow-intel = "^2.11.0"
opencv-python = "^4.6.0.66"
scikit-image = "^0.19.3"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'enpm809k.main:main'